# Open-AgroGea

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.en.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  quality.yml  release.yml
apps/agro-field-suite/: .env.standalone  THIRD_PARTY_LICENSES.txt  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/agro-field-suite/public/: sw.js
apps/agro-field-suite/src/: App.tsx  edition.ts  index.css  main.tsx  standalone.ts  vite-env.d.ts
apps/agro-field-suite/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/agro-field-suite/src-tauri/capabilities/: desktop.json  mobile.json
apps/agro-field-suite/src-tauri/icons/: desktop.ini  icon.icns
apps/agro-field-suite/src-tauri/patches/cookie/src/: expiration.rs
apps/agro-field-suite/src-tauri/src/: agro.rs  lib.rs
docs/: ARCHITECTURE.md  contributing.md  glossary.md  naming-conventions.md
docs/technical/: agronomic-modules.en.md  desktop-auto-update.md  moduli-agronomici.md
docs/user-guide/: client-manual.md  manual.en.md  manuale.md  tutorial.md
plugins/agro-tools/: package.json
plugins/agro-tools/src/: agrometeo.ts  clip.ts  fenologia.ts  fitopatologia.ts  index-grid.ts  index.ts  indices.ts  machinery.ts  overlay.ts  phenology.ts  phytopathology.ts  plugin.ts  (+5 more)
scripts/: gen-third-party-licenses.mjs  set-version.mjs
tests/: agro-add-data.test.ts  agro-catalogo.test.ts  agro-country-resolution.test.ts  agro-crop-colors.test.ts  agro-crop-cycle.test.ts  agro-data-io.test.ts  agro-dss-engine.test.ts  agro-dss-overlay.test.ts  agro-geometry-edit.test.ts  agro-gis-adapters.test.ts  agro-machinery.test.ts  agro-pan-validation.test.ts  agro-print-layout.test.ts  agro-readonly-guard.test.ts  agro-regional-export.test.ts  agro-schema-migration.test.ts  agro-settings.test.ts  agro-sian-export.test.ts  agro-sian-import.test.ts  agro-soil-pedology.test.ts  agro-subscription-limits.test.ts  agro-tools.test.ts  agro-warehouse.test.ts  agro-water-balance.test.ts
(+208 files in other folders)
