[package]
name = "app"
version = "0.1.0"
description = "AgroGea — suite agronomica di campo"
authors = ["Andrea Carnasciali"]
license = "AGPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# Sync on-premise: PostgreSQL del cliente via rete locale/VPN.
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
# Proxy lato nativo dei tile WMS/raster privi di header CORS (es. Catasto AdE):
# il fetch avviene in Rust, fuori dal sandbox CORS del webview. native-tls per
# riusare lo stack TLS di sistema già impiegato dal sync on-premise.
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
# TLS opzionale per il PostgreSQL on-premise esposto fuori VPN (sslmode=require/
# verify-*). native-tls usa lo stack TLS del sistema operativo (SChannel su
# Windows, Secure Transport su macOS, OpenSSL su Linux): nessuna dipendenza
# nativa aggiuntiva su Windows e supporto self-signed via sslmode=require.
native-tls = "0.2"
postgres-native-tls = "0.5"
uuid = { version = "1", features = ["serde"] }
# Keystore offline: PIN → Argon2id → AES-256-GCM.
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Auto-update nativo: SOLO desktop (Windows/macOS/Linux). L'updater Tauri non
# esiste su Android/iOS, dove gli aggiornamenti passano dagli store: gating per
# non rompere il build mobile. `process` serve al relaunch dopo l'installazione.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[patch.crates-io]
cookie = { path = "patches/cookie" }
